# catalyst

./: README.md  pyproject.toml
src/catalyst/: __init__.py  server.py
static/: index.html  virtual-scroll-grid.html
static/css/: dark.css  light.css
static/js/: json-tree-renderer.js  virtual-scroll-grid.js
