[project]
name = "catalyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrien Salais", email = "adrien.salais@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
catalyst = "catalyst:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
